src/assets/scss/alexandre.scss
.btn-login {
  border: none;

  &:hover {
    background-color: $primary;
    color: white;
  }
}

.btn:hover {
  transform: translateY(-3px);
}

.card-img-top {
  height: 180px;
}

.centered {
  text-align: center;
}

.discord {
  img {
    width: 50%;
  }
}

.red {
  background-color: $primary;
  color: white;

  h1,
  h2 {
    color: white;
  }
}

.inverse {
  background-color: rgba(black, 0.8);
  color: white;

  h1,
  h2 {
    color: white;
  }
}

.lead {
  font-weight: 400;
}

.footer {
  background-color: black;

  .copyright {
    color: gray;
  }

  img {
    height: 20px;
  }
}

.hero-img {
  width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: rgb(75, 75, 75);
  font-weight: bold;
}

.navbar-dark {
  background-color: black;
}

.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link:focus {
  :not(.btn-login) {
    color: $primary;
  }
}

.navbar-brand img {
  height: 35px;
}

.row > [class*="col-"] {
  margin-top: 1rem;
}

iframe {
  max-width: 100%;
}

.social-img {
  max-width: 125px;
  margin-bottom: 20px;
}

.color-telegram {
  color: $telegram;
}

.background-color-telegram {
  background-color: $telegram;
  border-color: $telegram;
  color: white;
}

.color-youtube {
  color: $youtube;
}

.background-color-youtube {
  background-color: $youtube;
  border-color: $youtube;
  color: white;
}

.color-discord {
  color: $discord;
}

.background-color-discord {
  background-color: $discord;
  border-color: $discord;
  color: white;

  &:hover,
  &:focus {
    background-color: $discord;
    border-color: $discord;
    color: white;
  }
}

.subtitle {
  color: $default;
}

.navbar-dark .navbar-nav .nav-link {
  color: white;

  &.active,
  &:hover {
    color: $primary;
  }
}

.navbar-nav {
  .nav-link-icon {
    color: white;

    &.active,
    &:hover {
      color: $primary;
    }
  }
}

.dropdown-item {
  color: $default;
}

.dropdown:hover,
.dropdown:focus,
.dropdown-item:hover,
.dropdown-item:focus,
.dropdown-item.active,
.dropdown-item:active {
  color: $primary;
}

.comunidade {
  p,
  li {
    font-size: 1.25rem;
    font-weight: 400;
    line-height: 1.5;
    margin-top: 1.5rem;
    text-align: justify;
  }
}

@media (max-width: 991.98px) {
  .navbar-nav {
    .nav-link {
      padding: 0;
    }
    .nav-item {
      margin-bottom: 1rem;
    }
  }
}

@media (min-width: 992px) {
  .navbar-nav {
    .nav-item {
      margin-right: 1rem;
    }
    .btn-login {
      margin-left: 1rem;
    }
  }

  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 0;
    padding-left: 0;
  }
}

